@@ -1,1 +1,8 @@
+/usr/sbin
 debian/netdata.conf /etc/netdata/
+usr/lib/*/netdata/charts.d
+usr/lib/*/netdata/plugins.d/apps.plugin
+usr/lib/*/netdata/plugins.d/charts.d.dryrun-helper.sh
+usr/lib/*/netdata/plugins.d/charts.d.plugin
+usr/lib/*/netdata/plugins.d/loopsleepms.sh.inc
+usr/lib/*/netdata/plugins.d/tc-qos-helper.sh
